fix(datepicker): overflow hidden remove

--- a/packages/web-components/src/components/modal/modal.scss
+++ b/packages/web-components/src/components/modal/modal.scss
@@ -28,7 +28,6 @@
   visibility: inherit;
 
   .#{$prefix}--modal-container {
-    overflow: visible;
     transform: translate3d(0, 0, 0);
     transition: transform $duration-moderate-02 motion(entrance, expressive);
   }
